# cv-phantom-gen

./: .gitignore  .travis.yml  AuroraPhantom.py  NarrowArcBlur.py  README.md  README.rst  RunGenOFtestPattern.m  doWriteVid.m  ismatlab.m  isoctave.m  makeSwirl.m  phantomTexture.m  requirements.txt  setup.cfg  setup.py  translateTexture.m
Matlab/: makeSwirl.m  phantomTexture.m  testFFT.m  translateTexture.m
cvphantom/: __init__.py  genphantom.py  phantoms.py  plots.py  transforms.py
test/: test.py
tests/: test.py  test_mod.py
