[metadata]
name = cvphantom
version = 1.0.0
author = Michael Hirsch, Ph.D.
author_email = scivision@users.noreply.github.com
description = Generate phantoms for noisy optical flow analysis
url = https://github.com/scivision/cv-phantom-gen
keywords =
  aurora
  phantom
classifiers =
  Development Status :: 5 - Production/Stable
  Environment :: Console
  Intended Audience :: Developers
  Intended Audience :: End Users/Desktop
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Utilities
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
  numpy
  scipy
  scikit-image

[options.extras_require]
tests =
  pytest >= 3.9
  pytest-cov
lint =
  flake8
  mypy
io =
  imageio
  imageio-ffmpeg
